yoshimi 1.5.0 M

2016-2-26 Will
* Fixed instrument background colours.

2017-2-24 Will
* Added ARM options to CMakeLists.txt
* Restored commented out AdNote cubic interpolation
  for future examination (currently would segfault).
* Updated copyright notices and dates in various files.

2017-2-23 Will
*Merged in Rob's live LFO controls.

2017-2-21 Will
* Merged  in Jesper's latest tooltip additions.
* Minor change to freemode Envelope text to remove overlaps.

2017-2-20 Will
* Remaining Cli inputs converted.
  I hope!

2017-2-19 Will
* Bugfix: Midi-learn wasn't reloading the correct ranges.
* Found more Cli numbers to adjust :(
* Started changing Cli *input* numbers to match Gui ones.
* Got as far as 'commandPart'.

2017-2-18 Will
* Vectors now soft-load :)

2017-2-17 Will
* Cli effect presets now numbered from 1.
* Improved Cli listing of effects/presets.
* Bugfix: Solo wasn't seeing 'Loop' when reloading.
* Bugfix: Mute not cleared if patchset load failed.
* Cli can load patchsets and vectors from list numbers.
* Cli loading vectors updates the Gui.

2017-2-16 Will
* Improved readline behavour.
  Still needs more work - sometimes multiple prompt lines!
* Converted reported Cli numbers to match Gui ones.
  May have missed some :(
  Entries still zero based.

2017-2-13 Will
* Spash screen onptimisations.
* Small Fadeout improvement.
* Doc updates.

2017-2-12 Will
* Separated out temporary Gui Write -> Read per section.
  This enables us to do conversions section by section.
* Improved Cli messaging.
* Re-implemented silent panic stop.
* Re-implimented soft master reset. Hopefully all OK now.

2017-2-11 Will
* Reverted unsafe changes from build 952.
* Small optimisation in main audio loop partonoff read.
* A few Gui tidy-ups.
* Mixer as well as main window now show current patchset.
* Cautious 2nd attempt at just soft patchset change.

2017-2-9 Will
* Global and part keyshifts now go through ringbuffer.
* Code tidy-ups and improved comments.