@@ -1,5 +1,10 @@
 yoshimi 1.5.0 M
 
+2016-3-1 Will
+* Started identifying default and limit values for part.
+  Cli direct access uses "lim" instead of value and type.
+* Small adjustment to part label display.
+
 2016-2-26 Will
 * Fixed instrument background colours.
 
